widgets: Hardcode dynamic width and provide a fixed height
This prevents double scrollbars or overflow

--- a/grantnav/frontend/static/css/main.css
+++ b/grantnav/frontend/static/css/main.css
@@ -558,6 +558,9 @@ template, [hidden] {
 .padding-bottom\:5 {
   padding-bottom: 5rem  !important; }
 
+.padding\:0 {
+  padding: 0  !important; }
+
 .justify-content-end {
   justify-content: end; }
 
